--- a/Teoría/Intermedio/El lenguaje de programación Python - Intermedio.ipynb
+++ b/Teoría/Intermedio/El lenguaje de programación Python - Intermedio.ipynb
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -153,21 +153,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NO es válida ❌\n"
+      "Es válida ✅\n"
      ]
     }
    ],
    "source": [
     "expresion = \"(^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+$)\"\n",
     "\n",
-    "correo = \"correo.proteco_4*@dominio.com\"\n",
+    "correo = \"correo.proteco_4@dominio.com\"\n",
     "\n",
     "if re.match(expresion, correo) is None:\n",
     "    print(\"NO es válida ❌\")\n",
