--- a/Teoría/Intermedio/El lenguaje de programación Python - Intermedio.ipynb
+++ b/Teoría/Intermedio/El lenguaje de programación Python - Intermedio.ipynb
@@ -82,8 +82,18 @@
     "\n",
     "Una expresión regular es un modelo con el que el motor de expresiones regulares intenta buscar una coincidencia en el texto de entrada. Un modelo consta de uno o más literales de carácter, operadores o estructuras.\n",
     "\n",
-    "**En otras palabras, buscamos patrones.**\n",
+    "**En otras palabras, buscamos PATRONES.**\n",
     "\n",
+    "\n",
+    "La siguiente tabla nos muestra algunas formas de poder denotar un conjunto de símbolos por ejemplo un dígito puede escribirse como `\\d` pero `\\d+` significa todos los números de cualquier longitud.`\\w` significa una letra pero `\\w+` significa todas las palabras habidas y por haber de todos los idiomas. \n",
+    "\n",
+    "![](img/picu.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Digamos que somos desarrolladores de software en una compañía donde un programa nos genera un **LOG** (traducción: Bitácora) y este es un texto largo largo largo. Un log es como el chismógrafo donde cada acción que hagas o los printf() que coloque el programador van al registro, como su nombre lo dice, una bitácora.\n",
     "\n",
     "Ejemplo:\n",
@@ -98,8 +108,8 @@
     "Si su trabajo consistiera en, tengo un archivo con más de 100 Millones de éstas líneas, me respondan las siguientes preguntas:\n",
     "\n",
     "- ¿Cuántas conexiones se realizaron del 12 al 15 de Diciembre por /administrator y con el método POST?\n",
-    "- ¿Cuántas conexiones GET de usuarios que no sean GET se realizaron en horario de 9 am a 4 pm?\n",
-    "- ¿Cuántas conexiones fueron exitosas (Código 200) el 24 y 25 de Diciembre en horario nocturno (9 pm a 7 am)?\n",
+    "- ¿Cuántas conexiones GET de usuarios que no sean /administrator se realizaron en horario de 12 am a 9 am?\n",
+    "- ¿Cuántas conexiones fueron exitosas (Código 200) el 13 y 14 de Diciembre?\n",
     "\n",
     "### ¿Nos ponemos a contar? 🤯 \n",
     "\n",
@@ -125,15 +135,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['11', '12']\n",
-      "Si, hay al menos una coincidencia!\n"
+      "['11', '12', '13', '14', '15', '20']\n",
+      "Hay al menos una coincidencia!\n"
      ]
     }
    ],
@@ -142,24 +152,28 @@
     "\n",
     "p = re.compile(r'\\d+')\n",
     "\n",
-    "x = p.findall('11 es un número y 12 también')\n",
+    "x = p.findall('11 es un número y 12 también, después tenemos al 13, 14, 15 y sin olvidar al 20')\n",
+    "\n",
     "print(x)\n",
     "\n",
     "if x:\n",
-    "    print(\"Si, hay al menos una coincidencia!\")\n",
+    "    print(\"Hay al menos una coincidencia!\")\n",
     "else:\n",
     "    print(\"No hay coincidencias\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 55,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<_sre.SRE_Match object; span=(0, 27), match='correo_prote.co_4@gmail.com'>\n",
       "Es válida ✅\n"
      ]
     }
@@ -167,12 +181,163 @@
    "source": [
     "expresion = \"(^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+$)\"\n",
     "\n",
-    "correo = \"correo.proteco_4@dominio.com\"\n",
+    "correo = \"correo_prote.co_4@gmail.com\"\n",
     "\n",
-    "if re.match(expresion, correo) is None:\n",
-    "    print(\"NO es válida ❌\")\n",
+    "print(re.match(expresion, correo))\n",
+    "\n",
+    "if re.match(expresion, correo):\n",
+    "    print(\"Es válida ✅\")\n",
     "else:\n",
-    "    print(\"Es válida ✅\")"
+    "    print(\"NO es válida ❌\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Contestemos las preguntas iniciales con un archivo externo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. ¿Cuántas conexiones se realizaron del 12 al 15 de Diciembre por /administrator y con el método POST?\n",
+    "\n",
+    "**Expresión regular:** `\\d+\\.\\d+\\.\\d+\\.\\d+ - - \\[1[2-5]\\/Dec\\/\\d+:.{17}POST \\/administrator\\/.+`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número de conexiones del 12-15 Dic POST por arministrador:  425\n",
+      "\n",
+      "Ejemplos: \n",
+      "\n",
+      "109.169.248.247 - - [12/Dec/2015:18:25:11 +0100] \"POST /administrator/index.php HTTP/1.1\" 200 4494 \"http://almhuette-raith.at/administrator/\" \"Mozilla/5.0 (Windows NT 6.0; rv:34.0) Gecko/20100101 Firefox/34.0\" \"-\"\n",
+      "\n",
+      "46.72.177.4 - - [12/Dec/2015:18:31:08 +0100] \"POST /administrator/index.php HTTP/1.1\" 200 4494 \"http://almhuette-raith.at/administrator/\" \"Mozilla/5.0 (Windows NT 6.0; rv:34.0) Gecko/20100101 Firefox/34.0\" \"-\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "#Compilamos nuestra expresión regular\n",
+    "miExpresionRegular = re.compile(r'\\d+\\.\\d+\\.\\d+\\.\\d+ - - \\[1[2-5]\\/Dec\\/\\d+:.{17}POST \\/administrator\\/.+')\n",
+    "\n",
+    "#Al abrir el archivo apache.log como 'archivo' has esto:\n",
+    "\n",
+    "with open('apache.log') as archivo:\n",
+    "    contenido = archivo.read()\n",
+    "    print(\"Número de conexiones del 12-15 Dic POST por arministrador: \",len(miExpresionRegular.findall(contenido)))\n",
+    "    \n",
+    "    print(\"\\nEjemplos: \\n\")\n",
+    "    print(miExpresionRegular.findall(contenido)[0]+\"\\n\")\n",
+    "    print(miExpresionRegular.findall(contenido)[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. ¿Cuántas conexiones GET de usuarios que no sean /administrator se realizaron en horario de 12 am a 9 am?\n",
+    "\n",
+    "**Expresión regular:** `\\d+\\.\\d+\\.\\d+\\.\\d+ - - \\[\\d+\\/\\w+\\/\\d+:0[0-9]:\\d+:\\d+ \\+\\d+\\] \"GET \\/(?!administrator).+`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número de conexiones GET no realizadas por /administrator de 0 am a 9 am:  36\n",
+      "\n",
+      "Ejemplos: \n",
+      "\n",
+      "188.143.232.11 - - [13/Dec/2015:00:01:23 +0100] \"GET /apache-log/access.log HTTP/1.1\" 200 75060 \"-\" \"Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; SV1)\" \"-\"\n",
+      "\n",
+      "66.249.66.19 - - [13/Dec/2015:00:40:24 +0100] \"GET / HTTP/1.1\" 200 10479 \"-\" \"Mozilla/5.0 (compatible; Googlebot/2.1; +http://www.google.com/bot.html)\" \"-\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "#Compilamos nuestra expresión regular\n",
+    "miExpresionRegular2 = re.compile(r'\\d+\\.\\d+\\.\\d+\\.\\d+ - - \\[\\d+\\/\\w+\\/\\d+:0[0-9]:\\d+:\\d+ \\+\\d+\\] \"GET \\/(?!administrator).+')\n",
+    "\n",
+    "#Al abrir el archivo apache.log como 'archivo' has esto:\n",
+    "\n",
+    "with open('apache.log') as archivo:\n",
+    "    contenido = archivo.read() # Lee su contenido\n",
+    "    print(\"Número de conexiones GET no realizadas por /administrator de 0 am a 9 am: \",len(miExpresionRegular2.findall(contenido))) #Imprime el tamaño del arreglo de todas las coincidencias\n",
+    "    print(\"\\nEjemplos: \\n\") \n",
+    "    print(miExpresionRegular2.findall(contenido)[0]+\"\\n\")\n",
+    "    print(miExpresionRegular2.findall(contenido)[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. ¿Cuántas conexiones fueron exitosas (Código 200) el 13 y 14 de Diciembre?\n",
+    "\n",
+    "**Expresión regular:** `\\d+\\.\\d+\\.\\d+\\.\\d+ - - \\[1[3-4]\\/Dec\\/\\d+:\\d+:\\d+:\\d+ \\+\\d+\\] \"\\w+ [^ ]+ [^ ]+ 200 .+`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conexiones Exitosas (200) el 13 y 14 de Diciembre:  636\n",
+      "\n",
+      "Ejemplos: \n",
+      "\n",
+      "109.106.143.62 - - [13/Dec/2015:00:00:20 +0100] \"GET /administrator/ HTTP/1.1\" 200 4263 \"-\" \"Mozilla/5.0 (Windows NT 6.0; rv:34.0) Gecko/20100101 Firefox/34.0\" \"-\"\n",
+      "\n",
+      "109.106.143.62 - - [13/Dec/2015:00:00:20 +0100] \"POST /administrator/index.php HTTP/1.1\" 200 4494 \"http://almhuette-raith.at/administrator/\" \"Mozilla/5.0 (Windows NT 6.0; rv:34.0) Gecko/20100101 Firefox/34.0\" \"-\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "#Compilamos nuestra expresión regular\n",
+    "miExpresionRegular3 = re.compile(r'\\d+\\.\\d+\\.\\d+\\.\\d+ - - \\[1[3-4]\\/Dec\\/\\d+:\\d+:\\d+:\\d+ \\+\\d+\\] \"\\w+ [^ ]+ [^ ]+ 200 .+')\n",
+    "\n",
+    "#Al abrir el archivo apache.log como 'archivo' has esto:\n",
+    "\n",
+    "with open('apache.log') as archivo:\n",
+    "    contenido = archivo.read() # Lee su contenido\n",
+    "    print(\"Conexiones Exitosas (200) el 13 y 14 de Diciembre: \",len(miExpresionRegular3.findall(contenido))) #Imprime el tamaño del arreglo de todas las coincidencias\n",
+    "    print(\"\\nEjemplos: \\n\") \n",
+    "    print(miExpresionRegular3.findall(contenido)[0]+\"\\n\")\n",
+    "    print(miExpresionRegular3.findall(contenido)[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bases de Datos"
    ]
   },
   {
