--- a/Teoría/Intermedio/El lenguaje de programación Python - Intermedio.ipynb
+++ b/Teoría/Intermedio/El lenguaje de programación Python - Intermedio.ipynb
@@ -342,6 +342,125 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cx_Oracle\n",
+    "\n",
+    "## DATOS DE CONEXIÓN\n",
+    "dsn_tns = cx_Oracle.makedsn('python.c7rbflvluzyk.us-east-2.rds.amazonaws.com', '1521', 'ORCL')\n",
+    "BasedeDatos = cx_Oracle.connect(user='PYTHON_INTERMEDIO', password='python', dsn=dsn_tns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "DatabaseError",
+     "evalue": "ORA-00955: name is already used by an existing object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mDatabaseError\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-109-6d6811e1df34>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m                                 \u001b[0mDOMICILIO\u001b[0m \u001b[0mVARCHAR2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m                                 SALARIO NUMBER(10,2))\n\u001b[0;32m---> 14\u001b[0;31m                                 \"\"\" )\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mDatabaseError\u001b[0m: ORA-00955: name is already used by an existing object"
+     ]
+    }
+   ],
+   "source": [
+    "## CREACIÓN DE LA TABLA O ENTIDAD\n",
+    "\n",
+    "# Para poder ejecutar un comando SQL dentro de Python usaremos: el objeto BaseDeDatos, tiene un objeto cursor\n",
+    "## Y este a su vez tiene un método llamado Execute que ejecuta un SQL en forma de cadena String.\n",
+    "\n",
+    "BasedeDatos.cursor().execute(\"\"\"CREATE TABLE PROFESOR(\n",
+    "                                ID number (10,0) NOT NULL,\n",
+    "                                NOMBRE VARCHAR2(30),\n",
+    "                                APELLIDO_PAT VARCHAR2(30),\n",
+    "                                APELLIDO_MAT VARCHAR2(30),\n",
+    "                                EDAD NUMBER(3,0),\n",
+    "                                DOMICILIO VARCHAR2(100),\n",
+    "                                SALARIO NUMBER(10,2))\n",
+    "                                \"\"\" )\n",
+    "\n",
+    "\n",
+    "## PARA QUE GUARDE LOS CAMBIOS AUTOMÁTICAMENTE\n",
+    "\n",
+    "BasedeDatos.autocommit = True \n",
+    "\n",
+    "\n",
+    "# INSERCIÓN DE DATOS\n",
+    "\n",
+    "## Imaginemos que creamos objetos de tipo profesor con estos atributos\n",
+    "\n",
+    "class Profesor:\n",
+    "    def __init__(self,id,nombre,apellido_pat,apellido_mat,edad,domicilio,salario):\n",
+    "        self.id = id\n",
+    "        self.nombre = nombre\n",
+    "        self.apellido_pat = apellido_pat\n",
+    "        self.apellido_mat = apellido_mat\n",
+    "        self.edad = edad\n",
+    "        self.domicilio = domicilio\n",
+    "        self.salario = salario\n",
+    "\n",
+    "## creamos a missConchi, a mrRafa, a missDulce y a missLoli, todos objetos de tipo Profesor\n",
+    "\n",
+    "missConchi = Profesor(1,'Ana Concepción','Castillo','Corona',33,'Av.Robles, Tabasco, Mex',13000)\n",
+    "mrRafa     = Profesor(2,'Rafael','García','Rueda',44,'Av. Maya, Tabasco, Mex',12000)\n",
+    "missDulce  = Profesor(3,'Dulce Mónica','Escalante','Garrido',30,'Av. Olmeca, Campeche, Mex',12000)\n",
+    "missLoli   = Profesor(4,'Maria Dolores','Taracena','Blé',31,'Av. Palenque, Chiapas, Mex',15000)\n",
+    "\n",
+    "# Hacemos una lista de profesores\n",
+    "\n",
+    "listaDeProfesores = [missConchi,mrRafa,missDulce,missLoli]\n",
+    "\n",
+    "sqls = [] # Y una lista para poder poner nuestras cadenas de texto SQL\n",
+    "\n",
+    "#Ahora hacemos los strings SQL para ver qué tal quedan\n",
+    "\n",
+    "for profe in listaDeProfesores:\n",
+    "    comandosql = 'INSERT INTO PROFESOR VALUES ('+str(profe.id)+',\\''+profe.nombre+'\\',\\''+profe.apellido_pat+'\\',\\''+profe.apellido_mat+'\\','+str(profe.edad)+',\\''+profe.domicilio+'\\','+str(profe.salario)+')'\n",
+    "    print(comandosql)\n",
+    "    sqls.append(comandosql)\n",
+    "\n",
+    "for comandos in sqls:\n",
+    "    BasedeDatos.cursor().execute(comandos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'Ana Concepción', 'Castillo', 'Corona', 33, 'Av.Robles, Tabasco, Mex', 13000.0)\n",
+      "(2, 'Rafael', 'García', 'Rueda', 44, 'Av. Maya, Tabasco, Mex', 12000.0)\n",
+      "(3, 'Dulce Mónica', 'Escalante', 'Garrido', 30, 'Av. Olmeca, Campeche, Mex', 12000.0)\n",
+      "(4, 'Maria Dolores', 'Taracena', 'Blé', 31, 'Av. Palenque, Chiapas, Mex', 15000.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "## RECUPERAR INFORMACIÓN DE ESA BASE DE DATOS\n",
+    "\n",
+    "cursor = BasedeDatos.cursor() ## El curso se utiliza para recorrer cada fila\n",
+    "cursor.execute('SELECT * FROM PROFESOR') # Ejecuta la instrucción SQL\n",
+    "\n",
+    "\n",
+    "for fila in cursor: ## Para cada fila que encuentre en la tabla(s)\n",
+    "    print(fila)\n",
+    "\n",
+    "BasedeDatos.cursor().close()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
