--- a/Teoría/Intermedio/El lenguaje de programación Python - Intermedio.ipynb
+++ b/Teoría/Intermedio/El lenguaje de programación Python - Intermedio.ipynb
@@ -239,7 +239,6 @@
     "with open('apache.log') as archivo:\n",
     "    contenido = archivo.read()\n",
     "    print(\"Número de conexiones del 12-15 Dic POST por arministrador: \",len(miExpresionRegular.findall(contenido)))\n",
-    "    \n",
     "    print(\"\\nEjemplos: \\n\")\n",
     "    print(miExpresionRegular.findall(contenido)[0]+\"\\n\")\n",
     "    print(miExpresionRegular.findall(contenido)[1])"
@@ -342,7 +341,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 40,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mis bases de datos son: \n",
+      "('asistente',)\n",
+      "('information_schema',)\n",
+      "('mysql',)\n",
+      "('performance_schema',)\n",
+      "('python2020',)\n",
+      "\n",
+      "Se ha creado la entidad de profesor\n",
+      "Se han creado objetos de la clase Profesor y los hemos puesto en una lista \n",
+      "Se han insertado a los profesores en la base\n",
+      "Se han cerrado correctamente las conexiones :)\n",
+      "Algoritmo finalizado!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mysql.connector\n",
+    "\n",
+    "#Creamos el conector a la BD\n",
+    "mydb = mysql.connector.connect(\n",
+    "  host=\"pythoninter.c7rbflvluzyk.us-east-2.rds.amazonaws.com\",\n",
+    "  user=\"admin\",\n",
+    "  password=\"proteco123\"\n",
+    ")\n",
+    "\n",
+    "## Creamos un cursor por la conexión creada--------------------------------------------\n",
+    "cursor1 = mydb.cursor()\n",
+    "cursor1.execute(\"CREATE DATABASE asistente\") ## FAVOR DE CREAR UNA BASE DE DATOS LLAMADA asistente_<numero_asistente>\n",
+    "cursor1.execute(\"SHOW DATABASES\")   ### Ej: asistente_1, asistente_2, asistente_3, etc.\n",
+    "print(\"Mis bases de datos son: \")\n",
+    "for baseDatos in cursor1:\n",
+    "    print(baseDatos)\n",
+    "\n",
+    "cursor1.execute(\"use asistente\") ## FAVOR DE INGRESAR asistente_<su_numero> ------------\n",
+    "\n",
+    "        \n",
+    "## Creamos otro cursor y creamos una entidad en la base de datos\n",
+    "\n",
+    "cursor2 = mydb.cursor()\n",
+    "cursor2.execute(\"\"\"CREATE TABLE PROFESOR (ID INT AUTO_INCREMENT PRIMARY KEY, \n",
+    "                                          NOMBRE VARCHAR(40),\n",
+    "                                          APELLIDO_PAT VARCHAR(40),\n",
+    "                                          APELLIDO_MAT VARCHAR(40),\n",
+    "                                          EDAD INT,\n",
+    "                                          DOMICILIO VARCHAR(255),\n",
+    "                                          SALARIO DECIMAL(5,2))\n",
+    "                                          \"\"\");\n",
+    "\n",
+    "print(\"\\nSe ha creado la entidad de profesor\")\n",
+    "\n",
+    "######## --------- Creamos unos objetos profesores.\n",
+    "\n",
+    "\n",
+    "class Profesor:\n",
+    "    def __init__(self,id,nombre,apellido_pat,apellido_mat,edad,domicilio,salario):\n",
+    "        self.id = id\n",
+    "        self.nombre = nombre\n",
+    "        self.apellido_pat = apellido_pat\n",
+    "        self.apellido_mat = apellido_mat\n",
+    "        self.edad = edad\n",
+    "        self.domicilio = domicilio\n",
+    "        self.salario = salario   \n",
+    "\n",
+    "missConchi = Profesor(1,'Ana Concepción','Castillo','Corona',33,'Av.Robles, Tabasco, Mex',13000)\n",
+    "mrRafa     = Profesor(2,'Rafael','García','Rueda',44,'Av. Maya, Tabasco, Mex',12000)\n",
+    "missDulce  = Profesor(3,'Dulce Mónica','Escalante','Garrido',30,'Av. Olmeca, Campeche, Mex',12000)\n",
+    "missLoli   = Profesor(4,'Maria Dolores','Taracena','Blé',31,'Av. Palenque, Chiapas, Mex',15000)\n",
+    "\n",
+    "#Hacemos una lista de objetos profesor\n",
+    "listaDeProfesores = [missConchi,mrRafa,missDulce,missLoli]\n",
+    "\n",
+    "print(\"Se han creado objetos de la clase Profesor y los hemos puesto en una lista \")\n",
+    "## Hacemos la instrucción SQL\n",
+    "\n",
+    "sql = \"INSERT INTO PROFESOR (NOMBRE, APELLIDO_PAT,APELLIDO_MAT,EDAD,DOMICILIO,SALARIO) VALUES (%s,%s,%s,%s,%s,%s)\"\n",
+    "\n",
+    "# Y mandamos a través del SQL y de la lista de profesores los datos a la base de datos en MySQL\n",
+    "\n",
+    "for profe in listaDeProfesores:\n",
+    "    valores = (profe.nombre, profe.apellido_pat,profe.apellido_mat,profe.edad,profe.domicilio,profe.salario)\n",
+    "    cursor2.execute(sql, valores)\n",
+    "\n",
+    "print(\"Se han insertado a los profesores en la base\")\n",
+    "\n",
+    "mydb.commit() ## Confirmamos los cambios\n",
+    "\n",
+    "## Por buenas prácticas, cerramos todas las conexiones\n",
+    "\n",
+    "if cursor1.close() and cursor2.close():\n",
+    "    print(\"Se han cerrado correctamente las conexiones :)\")\n",
+    "    print(\"Algoritmo finalizado!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'Ana Concepción', 'Castillo', 'Corona', 33, 'Av.Robles, Tabasco, Mex', Decimal('999.99'))\n",
+      "(2, 'Rafael', 'García', 'Rueda', 44, 'Av. Maya, Tabasco, Mex', Decimal('999.99'))\n",
+      "(3, 'Dulce Mónica', 'Escalante', 'Garrido', 30, 'Av. Olmeca, Campeche, Mex', Decimal('999.99'))\n",
+      "(4, 'Maria Dolores', 'Taracena', 'Blé', 31, 'Av. Palenque, Chiapas, Mex', Decimal('999.99'))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "otroCursor = mydb.cursor()\n",
+    "\n",
+    "otroCursor.execute(\"SELECT * FROM PROFESOR\")\n",
+    "\n",
+    "consulta = otroCursor.fetchall()\n",
+    "\n",
+    "for fila in consulta:\n",
+    "    print(fila)\n",
+    "    \n",
+    "otroCursor.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursorDelete = mydb.cursor()\n",
+    "cursorDelete.execute(\"DROP DATABASE asistente\")\n",
+    "cursorDelete.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,21 +521,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "DatabaseError",
-     "evalue": "ORA-00955: name is already used by an existing object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mDatabaseError\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-109-6d6811e1df34>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m                                 \u001b[0mDOMICILIO\u001b[0m \u001b[0mVARCHAR2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m                                 SALARIO NUMBER(10,2))\n\u001b[0;32m---> 14\u001b[0;31m                                 \"\"\" )\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mDatabaseError\u001b[0m: ORA-00955: name is already used by an existing object"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## CREACIÓN DE LA TABLA O ENTIDAD\n",
     "\n",
@@ -387,13 +541,16 @@
     "                                \"\"\" )\n",
     "\n",
     "\n",
-    "## PARA QUE GUARDE LOS CAMBIOS AUTOMÁTICAMENTE\n",
-    "\n",
-    "BasedeDatos.autocommit = True \n",
-    "\n",
-    "\n",
+    "BasedeDatos.autocommit = True  ## PARA QUE GUARDE LOS CAMBIOS AUTOMÁTICAMENTE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# INSERCIÓN DE DATOS\n",
-    "\n",
     "## Imaginemos que creamos objetos de tipo profesor con estos atributos\n",
     "\n",
     "class Profesor:\n",
@@ -415,8 +572,27 @@
     "\n",
     "# Hacemos una lista de profesores\n",
     "\n",
-    "listaDeProfesores = [missConchi,mrRafa,missDulce,missLoli]\n",
-    "\n",
+    "listaDeProfesores = [missConchi,mrRafa,missDulce,missLoli]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "DatabaseError",
+     "evalue": "ORA-00955: name is already used by an existing object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mDatabaseError\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-109-6d6811e1df34>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m                                 \u001b[0mDOMICILIO\u001b[0m \u001b[0mVARCHAR2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m                                 SALARIO NUMBER(10,2))\n\u001b[0;32m---> 14\u001b[0;31m                                 \"\"\" )\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mDatabaseError\u001b[0m: ORA-00955: name is already used by an existing object"
+     ]
+    }
+   ],
+   "source": [
     "sqls = [] # Y una lista para poder poner nuestras cadenas de texto SQL\n",
     "\n",
     "#Ahora hacemos los strings SQL para ver qué tal quedan\n",
