--- a/Teoría/Intermedio/El lenguaje de programación Python - Intermedio.ipynb
+++ b/Teoría/Intermedio/El lenguaje de programación Python - Intermedio.ipynb
@@ -521,9 +521,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "ORA-03113: end-of-file on communication channel\nProcess ID: 24979\nSession ID: 35 Serial number: 140733193396560",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-42-e05fd269250a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m                                 \u001b[0mDOMICILIO\u001b[0m \u001b[0mVARCHAR2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m                                 SALARIO NUMBER(10,2))\n\u001b[0;32m---> 14\u001b[0;31m                                 \"\"\" )\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mOperationalError\u001b[0m: ORA-03113: end-of-file on communication channel\nProcess ID: 24979\nSession ID: 35 Serial number: 140733193396560"
+     ]
+    }
+   ],
    "source": [
     "## CREACIÓN DE LA TABLA O ENTIDAD\n",
     "\n",
@@ -539,7 +551,6 @@
     "                                DOMICILIO VARCHAR2(100),\n",
     "                                SALARIO NUMBER(10,2))\n",
     "                                \"\"\" )\n",
-    "\n",
     "\n",
     "BasedeDatos.autocommit = True  ## PARA QUE GUARDE LOS CAMBIOS AUTOMÁTICAMENTE"
    ]
@@ -577,21 +588,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "DatabaseError",
-     "evalue": "ORA-00955: name is already used by an existing object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mDatabaseError\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-109-6d6811e1df34>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m                                 \u001b[0mDOMICILIO\u001b[0m \u001b[0mVARCHAR2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m                                 SALARIO NUMBER(10,2))\n\u001b[0;32m---> 14\u001b[0;31m                                 \"\"\" )\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mDatabaseError\u001b[0m: ORA-00955: name is already used by an existing object"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sqls = [] # Y una lista para poder poner nuestras cadenas de texto SQL\n",
     "\n",
