fix: Sweet Home Alabama

--- a/Teoría/Intermedio/El lenguaje de programación Python - Intermedio.ipynb
+++ b/Teoría/Intermedio/El lenguaje de programación Python - Intermedio.ipynb
@@ -635,6 +635,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sockets en Python 🧩"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En python podemos hacer uso de los Sockets para poder recibir o mandar paquetes de información entre dispositivos. Lo que se necesita para abrir un socket es una dirección IP y un puerto. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## La parte del Servidor ⚽️"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import socket  \n",
+    "  \n",
+    "s = socket.socket()   \n",
+    "s.bind((\"localhost\", 9999))  \n",
+    "s.listen(1)  \n",
+    "  \n",
+    "sc, addr = s.accept()  \n",
+    "  \n",
+    "while True:  \n",
+    "      recibido = sc.recv(1024)  \n",
+    "      if recibido == \"quit\":  \n",
+    "         break        \n",
+    "      print \"Recibido:\", recibido  \n",
+    "      sc.send(recibido)  \n",
+    "  \n",
+    "print(\"adios\")  \n",
+    "  \n",
+    "sc.close()  \n",
+    "s.close() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## La parte del cliente 🏀"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import socket  \n",
+    "  \n",
+    "s = socket.socket()   \n",
+    "s.connect((\"localhost\", 9999))  \n",
+    "  \n",
+    "while True:  \n",
+    "      mensaje = raw_input(\"> \")  \n",
+    "      s.send(mensaje)  \n",
+    "      if mensaje == \"quit\":  \n",
+    "         break  \n",
+    "  \n",
+    "print \"adios\"  \n",
+    "  \n",
+    "s.close() "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
