--- a/Teoría/Avanzado/El lenguaje de programación Python - Avanzado.ipynb
+++ b/Teoría/Avanzado/El lenguaje de programación Python - Avanzado.ipynb
@@ -294,6 +294,257 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejemplo de métodos numéricos 🍦"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**<span style=\"color:red\"> ** IMPORTANTE ** </span>**\n",
+    "\n",
+    "Para escribir una ecuación tienes que separar todo y multiplicar con \\*:  \n",
+    "f=2x+3 ❌     \n",
+    "f = 2*x + 3 ✅\n",
+    "\n",
+    "Para poner una potencia por ejemplo $2^3$ es poniendo doble asterísco. Ejemplo:\n",
+    "$$f(x) = x^2 + 2x +1$$\n",
+    "*Equivale a:*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Si quieres ejecutar debes hacerlo desde el principio del documento o desde donde empiezas a definir o no te saldrá el resultado. Para ejecutar debes presionar ALT + Enter en tu teclado sobre la celda que vas a interpretar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy as sy\n",
+    "from sympy.functions import sin,cos\n",
+    "import math\n",
+    "import matplotlib.pyplot as plt\n",
+    "x = sy.symbols('x')\n",
+    "def taylor(funcion,c,n):\n",
+    "    i = 0\n",
+    "    p = 0\n",
+    "    while i <= n:\n",
+    "        p = p + (funcion.diff(x,i).subs(x,c))/(math.factorial(i))*(x-c)**i\n",
+    "        i += 1\n",
+    "    return p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "#CAMBIA LA FUNCION, en dónde está alineado taylor (este caso c=0) y cuál es el mayor exponenete que quieres (este es 4)\n",
+    "p = taylor(cos(x),0,4)\n",
+    "print(\"El polinomios de Taylor es: \",p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Coloca aquí la evaluación del mismo\n",
+    "x=math.pi/3\n",
+    "## COLOCA AQUÍ EL RESULTADO DEL ANTERIOR POR AHORA D:\n",
+    "VALOROBTENIDO = x**4/24 - x**2/2 + 1\n",
+    "print(\"El valor de taylor es: \",VALOROBTENIDO)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Método de bisección 📊"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inserta la ecuación a buscar raíz\n",
+    "fx = lambda x: x**2 + 9*x + 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inserta tu rango y tolerancia\n",
+    "a = -5\n",
+    "b = 2\n",
+    "tolera = 0.01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PROCEDIMIENTO\n",
+    "tabla = []\n",
+    "tramo = b-a\n",
+    "fa = fx(a)\n",
+    "fb = fx(b)\n",
+    "i = 1\n",
+    "while (tramo>tolera):\n",
+    "    c = (a+b)/2\n",
+    "    fc = fx(c)\n",
+    "    tabla.append([i,a,c,b,fa,fc,fb,tramo])\n",
+    "    i = i+1\n",
+    "                 \n",
+    "    cambia = np.sign(fa)*np.sign(fc)\n",
+    "    if (cambia<0):\n",
+    "        b = c\n",
+    "        fb = fc\n",
+    "    else:\n",
+    "        a=c\n",
+    "        fa = fc\n",
+    "    tramo = b-a\n",
+    "c = (a+b)/2\n",
+    "fc = fx(c)\n",
+    "tabla.append([i,a,c,b,fa,fc,fb,tramo])\n",
+    "tabla = np.array(tabla)\n",
+    "raiz = c\n",
+    "np.set_printoptions(precision = 4)\n",
+    "print('i   a     c    b     f(a)   f(c)  f(b)  toler')\n",
+    "n=len(tabla)\n",
+    "for i in range(0,n,1):\n",
+    "    unafila = tabla[i]\n",
+    "    formato = '{:.0f}'+' '+(len(unafila)-1)*'{:.3f} '\n",
+    "    unafila = formato.format(*unafila)\n",
+    "    print(unafila)\n",
+    "print('raiz: ',raiz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.optimize as opt\n",
+    "#Inserta tu función\n",
+    "f1 = lambda x: x**3 + 4*x**2 - 10\n",
+    "# Solo cambia el rango 1,2 y la tolerancia, no cambies el xtol o tronará\n",
+    "print(opt.bisect(f1,1,2,xtol=0.001))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Método de Newton Raphson ⭐️"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=sy.symbols('x')\n",
+    "#funcion\n",
+    "funcion=sin(x) + cos(x)\n",
+    "\n",
+    "derivada=sy.diff(funcion,x)\n",
+    "\n",
+    "x_0=0\n",
+    "xr=x_0\n",
+    "\n",
+    "ea=100/100\n",
+    "\n",
+    "es=0.001/100\n",
+    "contador=-1\n",
+    "print(\"i\\t   xi\\t     Error Absoluto Porcentual\")\n",
+    "while ea>es:\n",
+    "    xra=xr\n",
+    "    contador+=1\n",
+    "    newton_rhapson=x-(funcion/derivada)\n",
+    "\n",
+    "    xr=newton_rhapson.evalf(subs={x: xr})\n",
+    "    \n",
+    "    #error aproximado relativo porcentual\n",
+    "    ea=sy.Abs(((xr-xra)/xr)*100)\n",
+    "    #resultado\n",
+    "    print(contador   ,xra, ea)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Método de la regla falsa."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El método de regla falsa o interpolación se basa en tener 2 limitantes o rango que sepamos que contienen a la raíz de la función. Su ecuación es:\n",
+    "\n",
+    "\n",
+    "$$r\\in[a,b]$$\n",
+    "\n",
+    "\n",
+    "$$ x_i = \\frac{f(a_i)bi - f(b_i)a_i}{f(a_i)-f(b_i)} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Inserte la ecuación aquí\n",
+    "x=sy.symbols('x')\n",
+    "Px = lambda x: x**2 - 2*x - 10\n",
+    "\n",
+    "## Fija los rangos de a y b donde buscarán\n",
+    "a = 2\n",
+    "b = 6\n",
+    "tolerancia = 0.1\n",
+    "l = (Px(a)*b - Px(b)*a)/(Px(a)-Px(b))\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def metodoFalso(f,a,b):\n",
+    "    anterior = 0\n",
+    "    error = 1\n",
+    "    while(error>tolerancia):\n",
+    "        l = (Px(a)*b - Px(b)*a)/(Px(a)-Px(b))\n",
+    "        "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
