--- a/Teoría/Básico/El lenguaje de programación Python - Básico.ipynb
+++ b/Teoría/Básico/El lenguaje de programación Python - Básico.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# El lenguaje de programación Python🐍 - Básico"
+    "# El lenguaje de programación Python - Básico 🐠"
    ]
   },
   {
@@ -16,20 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hola a todos!\n"
+      "Hola a mundo!\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hola a todos!\")  #Es costumbre entre los programadores\n",
-    "#(Postdata, esto es un comentario)"
+    "print(\"Hola a mundo!\")  #Es costumbre entre los programadores\n",
+    "#(Postdata, esto es un comentario), con # se escriben"
    ]
   },
   {
@@ -3543,7 +3543,7 @@
    "cell_type": "code",
    "execution_count": 88,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -3693,8 +3693,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Herencia:\n",
-    "\n"
+    "## Herencia ❄️\n",
+    "\n",
+    "La herencia hace que se puedan declarar nuevas clases basadas en otras para poder reutilizar el código, generando así una jerarquía de clases dentro de una aplicación. Si una clase deriva de otra, esta hereda sus atributos y métodos y puede añadir nuevos atributos, métodos o redefinir los heredados.\n",
+    "\n",
+    "#### Terminología:\n",
+    "\n",
+    "- **Superclase:** La clase cuyas características se heredan se conoce como superclase (o una clase base o una clase principal).\n",
+    "\n",
+    "- **Subclase:** La clase que hereda la otra clase se conoce como subclase (o una clase derivada, clase extendida o clase hija). La subclase puede agregar sus propios campos y métodos, además de los campos y métodos de la superclase.\n",
+    "\n",
+    "- **Reutilización:** La herencia respalda el concepto de “reutilización”, es decir, cuando queremos crear una clase nueva y ya hay una clase que incluye parte del código que queremos, podemos derivar nuestra nueva clase de la clase existente. Al hacer esto, estamos reutilizando los campos/atributos y métodos de la clase existente.\n"
    ]
   },
   {
@@ -3730,6 +3739,13 @@
    "source": [
     "Fulano = Supervisor(123,\"Erick\",\"Aguilar\",\"M\",\"supervisor de caja 1\")\n",
     "print(Fulano.consulta_tareas())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Los casos de herencia múltiple en python se dan cuando una clase secundaria o hija hereda atributos y metodos de mas de una clase principal o padre. Basta con separar con una coma ambas principales a la hora de crear la clase secundaria:"
    ]
   },
   {
@@ -3833,7 +3849,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Múltiples formas. Un león es a la vez un animal."
+    "El polimorfismo es una relajación del sistema de tipos, de tal manera que una referencia a una clase (atributo, parámetro o declaración local o elemento de un vector) acepta direcciones de objetos de dicha clase y de sus clases derivadas (hijas, nietas, …).\n",
+    "\n",
+    "\n",
+    "Múltiples formas. Un león es a la vez un animal.\n",
+    "\n",
+    "Tal como funcionan los lenguajes fuertemente tipados, una variable siempre deberá apuntar a un objeto de la clase que se indicó en el momento de su declaración\n"
    ]
   },
   {
@@ -3899,7 +3920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -3915,7 +3936,7 @@
     }
    ],
    "source": [
-    "class Perros(object): #Declaramos la clase principal Perros\n",
+    "class Perros(object): #Declaramos la clase principal Perros, todas heredan de la clase object\n",
     "    def ladrar (self):\n",
     "        print (\"\"\"GUAAAUU GUAAAUU!\"\"\")\n",
     "    def grunir (self):\n",
@@ -3998,265 +4019,130 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Archivos"
+    "# Archivos 🗃"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ejemplo de métodos numéricos 🍦"
+    "Python incorpora un tipo integrado llamado file, el cual es manipulado mediante un objeto archivo el cual fue generado a través de una función integrada.\n",
+    "\n",
+    "La biblioteca OS nos permite manipular archivos del sistema operativo. Como eliminarlos, moverlos y otras cosas que podríamos hacer desde shell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contenido de la carpeta: ['.DS_Store', 'El lenguaje de programación Python - Básico.ipynb', 'img', '.gitignore', '.ipynb_checkpoints']\n",
+      "Directorio actual: /Users/samuelarturogarridosanchez/Desktop/Proteco/Python2020-2/Teoría/Básico\n",
+      "Este documento pesa en bytes: 123819\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Listar el contenidos de una carpeta\n",
+    "import os\n",
+    "print(\"Contenido de la carpeta:\",os.listdir(\"./\"))\n",
+    "\n",
+    "#Mostrar el actual directorio de trabajo\n",
+    "print(\"Directorio actual:\",os.getcwd())\n",
+    "\n",
+    "#Mostrar el tamaño del archivo en bytes del archivo pasado en parámetro\n",
+    "\n",
+    "print(\"Este documento pesa en bytes:\",os.path.getsize(\"El lenguaje de programación Python - Básico.ipynb\"))\n",
+    "\n",
+    "#Para renombrar un archivo\n",
+    "# os.rename(\"Ana_Poleo\",\"Ana_Carolina\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**<span style=\"color:red\"> ** IMPORTANTE ** </span>**\n",
+    "### Apertura y leída de archivos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creación de un archivo\n",
+      "\n",
+      "Archivo creado en la ruta:/Users/samuelarturogarridosanchez/Desktop/Proteco/Python2020-2/Teoría/Básico/ejemplo.txt\n",
+      "\n",
+      "Lectura de archivo\n",
+      "Prueba para ver si se escribe en el archivo.\n",
+      "Y otra línea\n",
+      "Y otra\n",
+      "\n",
+      "Imprimir línea por línea\n",
+      "Línea:  Prueba para ver si se escribe en el archivo.\n",
+      "\n",
+      "Línea:  Y otra línea\n",
+      "\n",
+      "Línea:  Y otra\n",
+      "\n",
+      "\n",
+      "Eliminar un archivo\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
     "\n",
-    "Para escribir una ecuación tienes que separar todo y multiplicar con \\*:  \n",
-    "f=2x+3 ❌     \n",
-    "f = 2*x + 3 ✅\n",
+    "print(\"Creación de un archivo\")\n",
     "\n",
-    "Para poner una potencia por ejemplo $2^3$ es poniendo doble asterísco. Ejemplo:\n",
-    "$$f(x) = x^2 + 2x +1$$\n",
-    "*Equivale a:*"
+    "nombre = 'ejemplo.txt'\n",
+    "\n",
+    "archivo = open(nombre, 'w') # abre el archivo datos.txt en formato w de escritura\n",
+    "archivo.write('Prueba para ver si se escribe en el archivo.\\nY otra línea\\nY otra') ## String que se escribe\n",
+    "archivo.close() ## Cerramos el puntero\n",
+    "\n",
+    "## Determinar si el archivo fue creado o no\n",
+    "if nombre in os.listdir(\".\"):\n",
+    "    print(\"\\nArchivo creado en la ruta:\"+os.getcwd()+\"/\"+nombre)\n",
+    "else:\n",
+    "    print(\"No se encontró al archivo\")\n",
+    "\n",
+    "print(\"\\nLectura de archivo\")\n",
+    "\n",
+    "archivo = open(nombre, 'r') ## Se apertura el archivo en formato de lectura\n",
+    "contenido = archivo.read() ## Leemos\n",
+    "print(contenido) # Imprimimos el contenido\n",
+    "archivo.close() ## Cerramos el puntero\n",
+    "\n",
+    "\n",
+    "print(\"\\nImprimir línea por línea\")\n",
+    "\n",
+    "archivo = open(nombre, 'r') ## Se apertura el archivo en formato de lectura\n",
+    "for linea in archivo: ## Tiene un iterador interno para recorrer línea por línea\n",
+    "    print(\"Línea: \",linea)\n",
+    "print(\"\\n\")\n",
+    "archivo.close() # Cerramos el puntero\n",
+    "\n",
+    "\n",
+    "print(\"Eliminar un archivo\")\n",
+    "\n",
+    "#os.remove(os.getcwd()+\"/\"+NOMBRE_ARCHIVO)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Si quieres ejecutar debes hacerlo desde el principio del documento o desde donde empiezas a definir o no te saldrá el resultado. Para ejecutar debes presionar ALT + Enter en tu teclado sobre la celda que vas a interpretar"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sympy as sy\n",
-    "from sympy.functions import sin,cos\n",
-    "import math\n",
-    "import matplotlib.pyplot as plt\n",
-    "x = sy.symbols('x')\n",
-    "def taylor(funcion,c,n):\n",
-    "    i = 0\n",
-    "    p = 0\n",
-    "    while i <= n:\n",
-    "        p = p + (funcion.diff(x,i).subs(x,c))/(math.factorial(i))*(x-c)**i\n",
-    "        i += 1\n",
-    "    return p"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "#CAMBIA LA FUNCION, en dónde está alineado taylor (este caso c=0) y cuál es el mayor exponenete que quieres (este es 4)\n",
-    "p = taylor(cos(x),0,4)\n",
-    "print(\"El polinomios de Taylor es: \",p)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Coloca aquí la evaluación del mismo\n",
-    "x=math.pi/3\n",
-    "## COLOCA AQUÍ EL RESULTADO DEL ANTERIOR POR AHORA D:\n",
-    "VALOROBTENIDO = x**4/24 - x**2/2 + 1\n",
-    "print(\"El valor de taylor es: \",VALOROBTENIDO)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Método de bisección 📊"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Inserta la ecuación a buscar raíz\n",
-    "fx = lambda x: x**2 + 9*x + 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Inserta tu rango y tolerancia\n",
-    "a = -5\n",
-    "b = 2\n",
-    "tolera = 0.01"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# PROCEDIMIENTO\n",
-    "tabla = []\n",
-    "tramo = b-a\n",
-    "fa = fx(a)\n",
-    "fb = fx(b)\n",
-    "i = 1\n",
-    "while (tramo>tolera):\n",
-    "    c = (a+b)/2\n",
-    "    fc = fx(c)\n",
-    "    tabla.append([i,a,c,b,fa,fc,fb,tramo])\n",
-    "    i = i+1\n",
-    "                 \n",
-    "    cambia = np.sign(fa)*np.sign(fc)\n",
-    "    if (cambia<0):\n",
-    "        b = c\n",
-    "        fb = fc\n",
-    "    else:\n",
-    "        a=c\n",
-    "        fa = fc\n",
-    "    tramo = b-a\n",
-    "c = (a+b)/2\n",
-    "fc = fx(c)\n",
-    "tabla.append([i,a,c,b,fa,fc,fb,tramo])\n",
-    "tabla = np.array(tabla)\n",
-    "raiz = c\n",
-    "np.set_printoptions(precision = 4)\n",
-    "print('i   a     c    b     f(a)   f(c)  f(b)  toler')\n",
-    "n=len(tabla)\n",
-    "for i in range(0,n,1):\n",
-    "    unafila = tabla[i]\n",
-    "    formato = '{:.0f}'+' '+(len(unafila)-1)*'{:.3f} '\n",
-    "    unafila = formato.format(*unafila)\n",
-    "    print(unafila)\n",
-    "print('raiz: ',raiz)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import scipy.optimize as opt\n",
-    "#Inserta tu función\n",
-    "f1 = lambda x: x**3 + 4*x**2 - 10\n",
-    "# Solo cambia el rango 1,2 y la tolerancia, no cambies el xtol o tronará\n",
-    "print(opt.bisect(f1,1,2,xtol=0.001))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Método de Newton Raphson ⭐️"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x=sy.symbols('x')\n",
-    "#funcion\n",
-    "funcion=sin(x) + cos(x)\n",
-    "\n",
-    "derivada=sy.diff(funcion,x)\n",
-    "\n",
-    "x_0=0\n",
-    "xr=x_0\n",
-    "\n",
-    "ea=100/100\n",
-    "\n",
-    "es=0.001/100\n",
-    "contador=-1\n",
-    "print(\"i\\t   xi\\t     Error Absoluto Porcentual\")\n",
-    "while ea>es:\n",
-    "    xra=xr\n",
-    "    contador+=1\n",
-    "    newton_rhapson=x-(funcion/derivada)\n",
-    "\n",
-    "    xr=newton_rhapson.evalf(subs={x: xr})\n",
-    "    \n",
-    "    #error aproximado relativo porcentual\n",
-    "    ea=sy.Abs(((xr-xra)/xr)*100)\n",
-    "    #resultado\n",
-    "    print(contador   ,xra, ea)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Método de la regla falsa."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "El método de regla falsa o interpolación se basa en tener 2 limitantes o rango que sepamos que contienen a la raíz de la función. Su ecuación es:\n",
-    "\n",
-    "\n",
-    "$$r\\in[a,b]$$\n",
-    "\n",
-    "\n",
-    "$$ x_i = \\frac{f(a_i)bi - f(b_i)a_i}{f(a_i)-f(b_i)} $$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Inserte la ecuación aquí\n",
-    "x=sy.symbols('x')\n",
-    "Px = lambda x: x**2 - 2*x - 10\n",
-    "\n",
-    "## Fija los rangos de a y b donde buscarán\n",
-    "a = 2\n",
-    "b = 6\n",
-    "tolerancia = 0.1\n",
-    "l = (Px(a)*b - Px(b)*a)/(Px(a)-Px(b))\n",
-    "print(l)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def metodoFalso(f,a,b):\n",
-    "    anterior = 0\n",
-    "    error = 1\n",
-    "    while(error>tolerancia):\n",
-    "        l = (Px(a)*b - Px(b)*a)/(Px(a)-Px(b))\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# FIN"
+    "# FIN 🏁"
    ]
   }
  ],
