--- a/Teoría/Intermedio/El lenguaje de programación Python - Intermedio.ipynb
+++ b/Teoría/Intermedio/El lenguaje de programación Python - Intermedio.ipynb
@@ -701,12 +701,12 @@
     "s.connect((\"localhost\", 9999))  \n",
     "  \n",
     "while True:  \n",
-    "      mensaje = raw_input(\"> \")  \n",
-    "      s.send(mensaje)  \n",
-    "      if mensaje == \"quit\":  \n",
-    "         break  \n",
-    "  \n",
-    "print \"adios\"  \n",
+    "    mensaje = raw_input(\"> \")  \n",
+    "    s.send(mensaje)  \n",
+    "    if mensaje == \"quit\":  \n",
+    "        break  \n",
+    "\n",
+    "print(\"adios\")  \n",
     "  \n",
     "s.close() "
    ]
