feat: Avanzados presentaciones y libreta

--- a/Teoría/Intermedio/El lenguaje de programación Python - Intermedio.ipynb
+++ b/Teoría/Intermedio/El lenguaje de programación Python - Intermedio.ipynb
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Las ventajas de Python pueden ser muchas pero en las que destacan:"
+    "### Las ventajas de Python pueden ser muchas, pero destacan:"
    ]
   },
   {
@@ -78,7 +78,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## "
+    "# Contextos\n",
+    "\n"
    ]
   },
   {
